----------
v6.0.1-git
----------

[mms] Disallow pasting non-text elements into the HTML editor (Bug #11650).
[jan] Update Slovak translation (Jozef Sudolský <jozef.sudolsky@elbia.sk>).
[mms] If persistent IMAP caching is disabled, use an in-memory cache for the
      current page load.
[mms] Fix importing personal S/MIME certificate.
[mms] Correctly show ACL entry for current user even if ACL response for
      mailbox is empty.
[mms] Correctly remove unseen information from folder tree in dynamic mailbox
      view when mailbox is marked as not polled for new mail.
[mms] Fix expanding folder list in dynamic view when opening a mailbox and
      folder expansion is not saved in the prefs (Bug #11609).
[mms] Fix displaying HTML signature preference on identities preference page.
[mms] Fix dynamic view loading in IE8 (Bug #11614).
[mms] Optimize permission checking when creating a mailbox if no limit exists
      for a user.
[mms] Fix displaying column headers in dynamic mailbox view when accessing a
      POP3 server.
[mms] Fix display of innocent button in dynamic mailbox view (Bug #11604).
[mms] Fix displaying move to spam mailbox option in the preferences (Bug
      #11603).
[mms] Fixes to PGP Private key generation (Bug #11597).
[mms] Don't block remote message styling if sender is in whitelist.
[mms] Fix spellcheck display in dynamic view if HTML composition mode is the
      default (Bug #11592).


------
v6.0.0
------

[mms] Fix regression in adding an attachment in minimal view.


---------
v6.0.0RC2
---------

[jan] Update Polish translation (Krzysztof Kozera <krzysztof113@o2.pl>).
[jan] Update Dutch translation (Arjen de Korte <arjen+horde@de-korte.org>).
[mms] Fix regression causing large amounts of whitespace padding to be added to
      compose text in basic view.
[mms] Fix regression in sending messages in basic/minimal mode if no attachment
      is added (Bug #11582).
[jan] Fix key navigation in message view of basic mode.


---------
v6.0.0RC1