@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix shift-clicking in dynamic mailbox view when navigating to other mailboxes (Bug #11520).
 * [mms] Disallow pasting non-text elements into the HTML editor (Bug #11650).
 * [jan] Update Slovak translation (Jozef Sudolský &lt;jozef.sudolsky@elbia.sk&gt;).
 * [mms] If persistent IMAP caching is disabled, use an in-memory cache for the current page load.
@@ -2827,6 +2828,7 @@
    <date>2012-11-06</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix shift-clicking in dynamic mailbox view when navigating to other mailboxes (Bug #11520).
 * [mms] Disallow pasting non-text elements into the HTML editor (Bug #11650).
 * [jan] Update Slovak translation (Jozef Sudolský &lt;jozef.sudolsky@elbia.sk&gt;).
 * [mms] If persistent IMAP caching is disabled, use an in-memory cache for the current page load.
